fix spacing

--- a/projects/shell/src/app/composed/composed.component.css
+++ b/projects/shell/src/app/composed/composed.component.css
@@ -10,5 +10,5 @@
 }
 
 .tile {
-  padding: 10px;
+  padding: 20px;
 }
